fix editor preview pane overflow by removing vert height

--- a/client/components/Editor/editor.css
+++ b/client/components/Editor/editor.css
@@ -6,7 +6,3 @@
     margin-top: 1rem;
     font-size: 1.1rem;
 }
-
-.editor__content-pane {
-    height: 83vh !important;
-}
